examples/type_system/failing/46_duplicate_main_function.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/46_duplicate_main_function.flx
// error[E410]: Duplicate Main Function
//
// Program can contain only one top-level `fn main`.
//
//   examples/type_system/failing/46_duplicate_main_function.flx:32:1
//    |
// 28 | fn main() {
//    | --------- first `main` declared here
// 29 |     1
// 30 | }
// 31 |
// 32 | fn main() {
//    | ^^^^^^^^^
//    | --------- duplicate `main` declaration
//
// Hint:
//   Keep a single `fn main` entry point.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E410

// E410: only one top-level main function is allowed.

fn main() {
    1
}

fn main() {
    2
}
